--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   animated_background: ^2.0.0
   lottie: ^2.7.0
   nfc_manager: ^3.3.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
