handling qr code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   lottie: ^2.7.0
   nfc_manager: ^3.3.0
   http: ^1.1.0
+  pretty_qr_code: ^3.0.0
 
 dev_dependencies:
   flutter_test:
