--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
     <application
-        android:label="tager"
+        android:label="MBAGT"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
